load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)

cc_library(
    name = "zkclient",
    srcs = ["src/zkclient.cc"],
    hdrs = ["include/zkclient.h"],
    strip_include_prefix = "include",
    deps = [
        "@com_github_microsoft_gsl//:gsl",
        "@com_google_absl//absl/strings",
        "@org_apache_zookeeper//:libzookeeper_mt",
    ],
)

cc_binary(
    name = "test_main",
    srcs = ["test/main.cc"],
    deps = [":zkclient"],
)
