load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
    lint_mode = "fix",
    mode = "fix",
)

buildifier(
    name = "buildifier_lint",
    mode = "diff",
)

cc_library(
    name = "zkclient",
    srcs = ["src/zkclient.cc"],
    hdrs = ["include/zkclient/zkclient.h"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++14"],
        "//conditions:default": ["-std=c++14"],
    }),
    strip_include_prefix = "include",
    deps = [
        "@com_github_microsoft_gsl//:gsl",
        "@com_google_absl//absl/strings",
        "@org_apache_zookeeper//:libzookeeper_mt",
    ],
)

cc_binary(
    name = "test_main",
    srcs = ["test/main.cc"],
    copts = select({
        "@bazel_tools//src/conditions:windows": ["/std:c++14"],
        "//conditions:default": ["-std=c++14"],
    }),
    deps = [
        ":zkclient",
        "@com_github_microsoft_gsl//:gsl",
    ],
)
